Extract subscription controller